--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="http://127.0.0.1:8123/socket.io/socket.io.js"></script>
     <title>HangMan</title>
   </head>
   <body>
